--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "dependencies": {
+    "eslint": "^6.6.0",
     "knex": "^0.20.0",
     "pg": "^7.12.1"
+  },
+  "scripts": {
+    "test": "node tests/initialize.js && mocha tests/test.js && yarn lint",
+    "lint": "eslint --fix .",
+    "start": "node index.js",
+    "migrate": "knex migrate:latest --knexfile models/knexfile.js",
+    "rollback": "knex migrate:rollback --knexfile models/knexfile.js ",
+    "precommit": "pretty-quick --staged"
   }
 }
