--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "eslint": "^6.6.0",
+    "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "knex": "^0.20.0",
+    "moment": "^2.24.0",
     "pg": "^7.12.1"
   },
   "scripts": {
