--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "fs": "^0.0.1-security",
     "knex": "^0.20.0",
     "moment": "^2.24.0",
-    "pg": "^7.12.1"
+    "nodemon": "^1.19.4",
+    "pg": "^7.12.1",
+    "sqlite3": "^4.1.0"
   },
   "scripts": {
     "test": "node tests/initialize.js && mocha tests/test.js && yarn lint",
     "lint": "eslint --fix .",
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "migrate": "knex migrate:latest --knexfile models/knexfile.js",
     "rollback": "knex migrate:rollback --knexfile models/knexfile.js ",
     "precommit": "pretty-quick --staged"
