--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^6.6.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "knex": "^0.20.0",
+    "mocha": "^6.2.2",
     "moment": "^2.24.0",
     "nodemon": "^1.19.4",
     "pg": "^7.12.1",
     "sqlite3": "^4.1.0"
   },
   "scripts": {
-    "test": "node tests/initialize.js && mocha tests/test.js && yarn lint",
+    "test": "mocha tests/test.js",
     "lint": "eslint --fix .",
     "start": "node index.js",
     "dev": "nodemon index.js",
